# fixed_math

./: Cargo.toml  README.md
benches/: sin_cos.rs  sqrt.rs
examples/: sqrt.rs  sqrt_trait.rs  trig.rs  trig_trait.rs
src/: conversions.rs  lib.rs  sqrt.rs  trig.rs  util.rs
src/tables/: atan.table  atan_2p_deg.rs  atan_2p_rad.rs  mod.rs
src/traits/: mod.rs  sqrt.rs  trig.rs
tablegen/: Cargo.toml  _wolfram  atan_2p_deg.fish  atan_2p_deg.nu  atan_2p_rad.fish  atan_2p_rad.nu
tablegen/src/: main.rs
