[package]
name = "fixed_math"
description = "Some math traits and functions for `fixed` point numbers."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = ["tablegen"]

[features]
default = ["std"]
num_traits = ["dep:num-traits", "fixed/num-traits"]
std = ["fixed/std"]

[dependencies]
fixed = { version = "1.20" }
# match fixed deps
typenum = "1.14"
num-traits = { version = "0.2.15", default-features = false, features = ["i128"], optional = true }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "sin_cos"
harness = false
