[package]
name = "fixed_math"
description = "Some math traits and functions for `fixed` point numbers."
version = "0.2.1"
documentation = "https://docs.rs/fixed_math"
repository = "https://github.com/Zentropivity/fixed_math"
readme = "README.md"
keywords = ["fixed", "math", "numerics"]
categories = ["algorithms", "mathematics"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = ["tablegen"]

[features]
default = ["std"]
std = ["fixed/std"]

[dependencies]
fixed = { version = "1.23" }
# match fixed deps
typenum = "1.16"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "sin_cos"
harness = false
